Fixed alignment issues on xs screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,7 @@ footer{
 
 img{
 	max-width: 100%;
+	max-height: 100%;
 	object-fit: contain;
 	padding-left: auto;
 	padding-right: auto;
